新建HTML文件 nzx.html

--- a/nzx.html
+++ b/nzx.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<div>你的眼中明暗交杂,一笑生花.</div>
 </body>
 </html>
